# nexusquant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-ZH.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py  long_context.py  nexusquant_demo.ipynb  quality_presets.py
experiments/: benchmark_triton_kernel.py  cerebrium_14b_validation.py  eviction_e8_1024.py  eviction_e8_1024_text2.py  eviction_e8_20x.py  eviction_e8_definitive.py  final_standard_benchmark.py  investigate_negative_ppl.py  modal_16k_latency.py  modal_4k_and_validation.py  modal_70b_validation.py  modal_8k_16k_validation.py  modal_adaptive_bits.py  modal_asymmetric_kv.py  modal_attention_scorer.py  modal_calibrated.py  modal_combined_best.py  modal_final_fixes.py  modal_fine_grid.py  modal_group32.py  modal_llama3_8k.py  modal_longbench_full.py  modal_longbench_llama3.py  modal_mistral_eviction.py  modal_quality_improve.py  modal_quality_push.py  modal_quality_sweep.py  modal_simplify_test.py  modal_validation_rerun.py
nexusquant/: __init__.py  pipeline.py
nexusquant/core/: __init__.py  compression_accounting.py  dp_allocator.py  e8_lattice.py  hadamard.py  (+8 more)
paper/: abstract.tex  blog_asymmetric_kv_findings.md  blog_negative_results.md  blog_nexusquant_practical_guide.md  blog_nexusquant_vs_ktransformers.md  compile_on_modal.py  generate_figures.py  introduction.tex  neurips_2026.sty  nexusquant.bib  nexusquant.tex
tests/: test_core.py
(+5 files in other folders)
